--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "invoice-generator-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.14.1",
@@ -16,13 +19,13 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^8.1.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.1",
     "redux": "^4.2.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "set SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,8 +49,5 @@
   },
   "devDependencies": {
     "cypress": "^10.10.0"
-  },
-  "engines": {
-    "node": "14.x"
   }
 }
